force-app/main/default/objects/Expense_Report__c/fields/Raw_Input_Data__c.field-meta.xml
<CustomField>
    <fullName>Raw_Input_Data__c</fullName>
    <label>Raw Input Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>