force-app/main/default/objects/Expense_Report__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
                <isActive>false</isActive>
                <label>Error</label>
            </value>
            <value>
                <fullName>Processing</fullName>
                <isActive>false</isActive>
                <label>Processing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>