force-app/main/default/objects/Expense_Report__c/fields/Total_Currency__c.field-meta.xml
<CustomField>
    <fullName>Total_Currency__c</fullName>
    <label>Total Currency</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>